// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyDocuments Components render correctly if there is document 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="MuiPaper-root MuiCard-root card MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiCardContent-root"
      >
        <h4
          class="MuiTypography-root Typography-root-23 Typography-underline-25 MuiTypography-h4"
          data-testid="typography"
          style="font-size: 1.2rem;"
        >
          document.title
        </h4>
        <div
          class="header"
        />
        <div
          class="body"
        >
          <div>
            <table
              class="MuiTable-root Table-root-45 Table-evenColor-47"
            >
              <thead
                class="MuiTableHead-root ColorPair-root-57 ColorPair-pearl-59"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    document.headers.document
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    document.headers.date
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    document.headers.download
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  />
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    12 December 2020
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  />
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CompanyDocuments Components render correctly if there is no document 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="MuiPaper-root MuiCard-root card MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiCardContent-root"
      >
        <h4
          class="MuiTypography-root Typography-root-1 Typography-underline-3 MuiTypography-h4"
          data-testid="typography"
          style="font-size: 1.2rem;"
        >
          document.title
        </h4>
        <div
          class="header"
        />
        <div
          class="main"
        >
          document.noContent
        </div>
      </div>
    </div>
  </div>
</div>
`;
